Fix the WWM Collapse 3 layout in admin pages where the regions disappear when empty.

--- a/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
+++ b/plugins/layouts/wwm_collpase_3/wwm_collapse_3.scss
@@ -20,6 +20,8 @@
 		.right-column {
 			@include span-columns(4);
 		}
+
+		.empty { display: block; }
 	}
 }
 
